Home block + projects + other blocks.

--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -5,12 +5,12 @@
 @import "vars";
 @import "defaults";
 
+@import "btn";
 @import "footer";
 @import "home_block";
 @import "owl.carousel";
 @import "process";
 @import "project";
-//@import "table";
 @import "team";
 @import "topmenu";
 
