--- a/src/assets/styles/topmenu.scss
+++ b/src/assets/styles/topmenu.scss
@@ -1,6 +1,3 @@
-
-
-
 .topmenu {
 	background-color: rgba(#fff, .3);
 	box-shadow: 0 0 7px $c_gradient_home_end;
@@ -45,6 +42,8 @@
 
 		.topmenu_mobile__toggle,
 		.topmenu_mobile__toggle:visited {
+			&::after,
+			&::before,
 			> span {
 				background-color: #000;
 			}
@@ -267,34 +266,33 @@
 
 .topmenu_mobile__toggle,
 .topmenu_mobile__toggle:visited {
+	display: block;
 	cursor: pointer;
 	height: 40px;
 	position: relative;
 	text-decoration: none;
 	width: 40px;
 
+	&::after,
+	&::before,
 	> span {
 		background-color: #fff;
+		content: "";
 		display: block;
 		height: 2px;
-		margin: 0 0 4px;
 		left: 8px;
+		margin: 0 0 4px;
 		position: absolute;
+		top: 16px;
 		transition: $transition;
 		width: 22px;
+	}
 
-		&:nth-child(1) {
-			top: 10px;
-		}
+	&::after {
+		top: 10px;
+	}
 
-		&:nth-child(2) {
-			top: 16px;
-		}
-
-		&:nth-child(3) {
-			top: 22px;
-		}
+	&::before {
+		top: 22px;
 	}
 }
-
-
