--- a/src/assets/styles/owl.carousel.scss
+++ b/src/assets/styles/owl.carousel.scss
@@ -118,17 +118,17 @@
 	background: #000; }
 
 .owl-carousel .owl-video-play-icon {
-	position: absolute;
+	cursor: pointer;
 	height: 80px;
-	width: 80px;
 	left: 50%;
-	top: 50%;
 	margin-left: -40px;
 	margin-top: -40px;
-	//background: url("owl.video.play.png") no-repeat;
-	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	transition: transform 100ms ease;
+	width: 80px;
 	z-index: 1;
-	transition: transform 100ms ease; }
+}
 
 .owl-carousel .owl-video-play-icon:hover {
 	transform: scale(1.3, 1.3);
