--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -1,6 +1,4 @@
 
-
-
 .contacts {
 	color: $c_text;
 	margin: 0 auto;
@@ -156,8 +154,24 @@
 	display: block;
 	margin: 30px 0 0;
 
-	a,
-	a:visited {
+	&__img {
+		display: block;
+		left: 0;
+		position: absolute;
+		top: 0;
+	}
+
+	&__item {
+		display: block;
+		margin: 0 0 11px;
+		position: relative;
+
+		&:last-child {
+			margin: 0;
+		}
+	}
+
+	&__link {
 		align-items: center;
 		color: #000;
 		display: flex;
@@ -171,23 +185,6 @@
 			text-decoration: none;
 		}
 	}
-
-	img {
-		display: block;
-		left: 0;
-		position: absolute;
-		top: 0;
-	}
-
-	li {
-		display: block;
-		margin: 0 0 11px;
-		position: relative;
-
-		&:last-child {
-			margin: 0;
-		}
-	}
 }
 
 .contacts_subtitle {
@@ -195,5 +192,3 @@
 	line-height: 1.5;
 	margin: 0;
 }
-
-
