--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -1,6 +1,4 @@
 
-
-
 @keyframes blur {
 	0% {
 		filter: blur(0px);
@@ -10,6 +8,12 @@
 	}
 	100% {
 		filter: blur(0px);
+	}
+}
+
+.home {
+	h1 {
+		display: none;
 	}
 }
 
@@ -84,5 +88,3 @@
 		font-size: 16px;
 	}
 }
-
-
