--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -47,44 +47,44 @@
 		z-index: 3;
 	}
 
+	&__desc {
+		animation: blur 5s infinite;
+		font-size: 98px;
+		font-weight: 700;
+		margin: 0 0 .25em;
+		position: relative;
+		text-transform: uppercase;
+
+		@media #{$tablet} {
+			font-size: 55px;
+		}
+
+		@media #{$mobile} {
+			font-size: 35px;
+		}
+	}
+
+	&__slogan {
+		font-size: 29px;
+		margin: 0 0 1.4em;
+		opacity: 1;
+		text-transform: uppercase;
+		transition: all 1s ease-in-out;
+
+		&__hide {
+			opacity: 0;
+		}
+
+		@media #{$tablet} {
+			font-size: 24px;
+		}
+
+		@media #{$mobile} {
+			font-size: 16px;
+		}
+	}
+
 	@media #{$mobile} {
 		min-height: 0;
-	}
-}
-
-.home_block_desc {
-	animation: blur 5s infinite;
-	font-size: 98px;
-	font-weight: 700;
-	margin: 0 0 .25em;
-	position: relative;
-	text-transform: uppercase;
-
-	@media #{$tablet} {
-		font-size: 55px;
-	}
-
-	@media #{$mobile} {
-		font-size: 35px;
-	}
-}
-
-.home_block_slogan {
-	font-size: 29px;
-	margin: 0 0 1.4em;
-	opacity: 1;
-	text-transform: uppercase;
-	transition: all 1s ease-in-out;
-
-	&__hide {
-		opacity: 0;
-	}
-
-	@media #{$tablet} {
-		font-size: 24px;
-	}
-
-	@media #{$mobile} {
-		font-size: 16px;
 	}
 }
