--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -43,19 +43,11 @@
 		}
 	}
 
-	.wp-block-column {
-		flex-basis: auto;
-		flex-grow: unset;
-
-		&:nth-child(2) {
-			margin: 0;
-			padding: 0 0 0 30px;
-			width: 40%;
-		}
-	}
-
-	.wp-block-columns {
-		justify-content: center;
+	&__content {
+		margin: 0 auto;
+		max-width: 400px;
+		padding: 0 0 30px;
+		width: 100%;
 	}
 
 	&__wrap {
@@ -151,14 +143,15 @@
 }
 
 .contacts_links {
-	display: block;
-	margin: 30px 0 0;
+	margin: 30px 0;
 
 	&__img {
 		display: block;
 		left: 0;
 		position: absolute;
 		top: 0;
+		max-width: 24px;
+		width: 100%;
 	}
 
 	&__item {
@@ -176,7 +169,7 @@
 		color: #000;
 		display: flex;
 		min-height: 23px;
-		padding: 0 0 0 43px;
+		padding: 0 0 0 40px;
 		position: relative;
 		text-decoration: none;
 		width: 100%;
