go top CSS refactoring

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -165,8 +165,7 @@ html {
 	}
 }
 
-.gotop,
-.gotop:visited {
+.gotop {
 	background-color: $c_gotop;
 	border-radius: 50%;
 	border: 2px solid $c_gradient_home_end;
