--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,5 +1,7 @@
 // sCSS Document
-// Powered by Dennis FOX | dfox@foxartbox.com
+// Powered by Denis FOX | dfox@foxartbox.com
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');
 
 // colors
 $c_border:                  #444;
@@ -48,161 +50,4 @@ $mobile:                'only screen and (max-width: 767px)';
 $tablet:                'only screen and (max-width: 1023px)';
 
 // fonts
-$font_main:             'Gotham Pro',       Arial, Helvetica, sans-serif;
-$font_gotham_pro:       'Gotham Pro',       Arial, Helvetica, sans-serif;
-
-// Gotham Pro
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro.eot');
-	src: local('Gotham Pro'), local('GothamPro'),
-	url($fontsFolder + 'GothamPro.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro.woff') format('woff'),
-	url($fontsFolder + 'GothamPro.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-// Gotham Pro Black
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-Black.eot');
-	src: local('Gotham Pro Black'), local('GothamPro-Black'),
-	url($fontsFolder + 'GothamPro-Black.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-Black.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-Black.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-Black.ttf') format('truetype');
-	font-weight: 900;
-	font-style: normal;
-}
-
-// Gotham Pro Black Italic
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-BlackItalic.eot');
-	src: local('Gotham Pro Black Italic'), local('GothamPro-BlackItalic'),
-	url($fontsFolder + 'GothamPro-BlackItalic.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-BlackItalic.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-BlackItalic.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-BlackItalic.ttf') format('truetype');
-	font-weight: 900;
-	font-style: italic;
-}
-
-// Gotham Pro Bold
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-Bold.eot');
-	src: local('Gotham Pro Bold'), local('GothamPro-Bold'),
-	url($fontsFolder + 'GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-Bold.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-Bold.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-
-// Gotham Pro Bold Italic
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-BoldItalic.eot');
-	src: local('Gotham Pro Bold Italic'), local('GothamPro-BoldItalic'),
-	url($fontsFolder + 'GothamPro-BoldItalic.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-BoldItalic.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-BoldItalic.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
-}
-
-// Gotham Pro Italic
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-Italic.eot');
-	src: local('Gotham Pro Italic'), local('GothamPro-Italic'),
-	url($fontsFolder + 'GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-Italic.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-Italic.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-Italic.ttf') format('truetype');
-	font-weight: normal;
-	font-style: italic;
-}
-
-// Gotham Pro Light
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-Light.eot');
-	src: local('Gotham Pro Light'), local('GothamPro-Light'),
-	url($fontsFolder + 'GothamPro-Light.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-Light.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-Light.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-Light.ttf') format('truetype');
-	font-weight: 300;
-	font-style: normal;
-}
-
-// Gotham Pro Light Italic
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-LightItalic.eot');
-	src: local('Gotham Pro Light Italic'), local('GothamPro-LightItalic'),
-	url($fontsFolder + 'GothamPro-LightItalic.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-LightItalic.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-LightItalic.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-LightItalic.ttf') format('truetype');
-	font-weight: 300;
-	font-style: italic;
-}
-
-// Gotham Pro Medium
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-Medium.eot');
-	src: local('Gotham Pro Medium'), local('GothamPro-Medium'),
-	url($fontsFolder + 'GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-Medium.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-Medium.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-Medium.ttf') format('truetype');
-	font-weight: 500;
-	font-style: normal;
-}
-
-// Gotham Pro Medium Italic
-@font-face {
-	font-family: 'Gotham Pro';
-	src: url($fontsFolder + 'GothamPro-MediumItalic.eot');
-	src: local('Gotham Pro Medium Italic'), local('GothamPro-MediumItalic'),
-	url($fontsFolder + 'GothamPro-MediumItalic.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamPro-MediumItalic.woff2') format('woff2'),
-	url($fontsFolder + 'GothamPro-MediumItalic.woff') format('woff'),
-	url($fontsFolder + 'GothamPro-MediumItalic.ttf') format('truetype');
-	font-weight: 500;
-	font-style: italic;
-}
-
-// Gotham Pro Narrow Bold
-@font-face {
-	font-family: 'Gotham Pro Narrow';
-	src: url($fontsFolder + 'GothamProNarrow-Bold.eot');
-	src: local('Gotham Pro Narrow Bold'), local('GothamProNarrow-Bold'),
-	url($fontsFolder + 'GothamProNarrow-Bold.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamProNarrow-Bold.woff2') format('woff2'),
-	url($fontsFolder + 'GothamProNarrow-Bold.woff') format('woff'),
-	url($fontsFolder + 'GothamProNarrow-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-
-// Gotham Pro Narrow Medium
-@font-face {
-	font-family: 'Gotham Pro Narrow';
-	src: url($fontsFolder + 'GothamProNarrow-Medium.eot');
-	src: local('Gotham Pro Narrow Medium'), local('GothamProNarrow-Medium'),
-	url($fontsFolder + 'GothamProNarrow-Medium.eot?#iefix') format('embedded-opentype'),
-	url($fontsFolder + 'GothamProNarrow-Medium.woff2') format('woff2'),
-	url($fontsFolder + 'GothamProNarrow-Medium.woff') format('woff'),
-	url($fontsFolder + 'GothamProNarrow-Medium.ttf') format('truetype');
-	font-weight: 500;
-	font-style: normal;
-}
+$font_main:             'Open Sans',        Arial, Helvetica, sans-serif;
