gradient BG at home block. Part 2

--- a/src/assets/styles/defaults.scss
+++ b/src/assets/styles/defaults.scss
@@ -1,6 +1,30 @@
 @charset "utf-8";
 // sCSS Document
 
+@keyframes bg_gradient {
+	0% {
+		background-position: 0 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0 50%;
+	}
+}
+
+@keyframes blur {
+	0% {
+		filter: blur(0px);
+	}
+	50% {
+		filter: blur(4px);
+	}
+	100% {
+		filter: blur(0px);
+	}
+}
+
 // Standart class [START]
 * {
 	border: 0 none;
@@ -276,11 +300,13 @@ $fontSizes: 0, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 2
 	text-transform: uppercase;
 }
 
-.w50 {
-	width: 50%;
-}
+// font-sizes [START]
+$widthSizes: 0, 30, 50, 100;
 
-.w100 {
-	width: 100%;
+@each $widthSize in $widthSizes {
+	.w#{$widthSize} {
+		width: #{$widthSize}#{'%'};
+	}
 }
+// font-sizes [END]
 // help classes [END]
