--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,15 +1,3 @@
-@keyframes bg_gradient {
-	0% {
-		background-position: 0 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0 50%;
-	}
-}
-
 .footer {
 	animation: bg_gradient 10s ease infinite;
 	background: linear-gradient(-45deg, $c_gradient_home_start, $c_gradient_home_end, $c_gradient_footer_1, $c_gradient_footer_2);
@@ -19,8 +7,7 @@
 	position: relative;
 	text-align: center;
 
-	a,
-	a:visited {
+	a {
 		color: #fff;
 		display: inline-block;
 		text-decoration: none;
