Home block logo. Distance between fox art box letters.

--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -45,6 +45,11 @@
 		position: relative;
 		text-transform: uppercase;
 
+		span {
+			display: inline-block;
+			margin: 0 .4em;
+		}
+
 		@media #{$tablet} {
 			font-size: 55px;
 		}
