--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -5,18 +5,6 @@
 // Different screen sizes
 
 // Standart class [START]
-@keyframes glowing {
-	0% {
-		background-position: 0 0;
-	}
-	50% {
-		background-position: 400% 0;
-	}
-	100% {
-		background-position: 0 0;
-	}
-}
-
 body {
 	font-family: $font_main;
 }
@@ -30,13 +18,15 @@ h1 {
 }
 
 h2 {
+	animation: letterSpacing 7s ease infinite;
 	color: $c_title;
 	display: block;
-	font-size: 70px;
+	font-size: 110px;
 	font-weight: 700;
+	letter-spacing: .1em;
 	line-height: 1.2;
 	margin: 0;
-	padding: 1em 0 .8em;
+	padding: .3em 0;
 	position: relative;
 	text-align: center;
 }
