--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	animation: bg_gradient 10s ease infinite;
+	animation: bgGradient 10s ease infinite;
 	background: linear-gradient(-45deg, $c_gradient_home_start, $c_gradient_home_end, $c_gradient_footer_1, $c_gradient_footer_2);
 	background-size: 400% 400%;
 	color: #fff;
