Contacts CSS update. Part 2

--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -156,7 +156,7 @@ html {
 }
 
 .gotop {
-	background-color: $c_gotop;
+	background-color: #fff;
 	border-radius: 50%;
 	border: 2px solid $c_gradient_home_end;
 	cursor: pointer;
