--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -48,7 +48,7 @@
 }
 
 .table_cooler {
-	background: url(#{$i}/wp-content/uploads/2021/03/cooler.png) center center no-repeat scroll transparent;
+	background: url(/wp-content/uploads/2021/03/cooler.png) center center no-repeat scroll transparent;
 	background-size: contain;
 	position: absolute;
 	top: 23.8%;
@@ -79,7 +79,7 @@
 }
 
 .table_grill {
-	background: url(#{$i}/wp-content/uploads/2021/03/grill.png) center center no-repeat scroll transparent;
+	background: url(/wp-content/uploads/2021/03/grill.png) center center no-repeat scroll transparent;
 	background-size: cover;
 	left: 37%;
 	position: absolute;
