--- a/src/assets/styles/project.scss
+++ b/src/assets/styles/project.scss
@@ -1,9 +1,3 @@
-@keyframes projects_loading {
-	100% {
-		transform: rotate(360deg);
-	}
-}
-
 .project {
 	color: #000;
 	position: relative;
@@ -154,7 +148,7 @@
 	position: relative;
 
 	&::after {
-		animation: projects_loading 2s linear infinite;
+		animation: loading 2s linear infinite;
 		background: url(#{$icons}/loading.svg) no-repeat center scroll transparent;
 		background-size: contain;
 		content: "";
