--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -47,6 +47,7 @@ $transition:                all .3s ease-in-out;
 // @medias
 $desktop:               'only screen and (max-width: 1279px)';
 $mobile:                'only screen and (max-width: 767px)';
+$mobile_s:              'only screen and (max-width: 500px)';
 $tablet:                'only screen and (max-width: 1023px)';
 
 // fonts
