--- a/src/assets/styles/home_block.scss
+++ b/src/assets/styles/home_block.scss
@@ -58,11 +58,12 @@
 	&__slogan {
 		font-size: 29px;
 		margin: 0 0 1.4em;
+		min-height: 39px;
 		opacity: 1;
 		text-transform: uppercase;
 		transition: all 1s ease-in-out;
 
-		&__hide {
+		&.active {
 			opacity: 0;
 		}
 
