--- a/src/assets/styles/process.scss
+++ b/src/assets/styles/process.scss
@@ -1,116 +1,34 @@
-.process {}
+.process {
+	counter-reset: process_counter;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	list-style: none;
+	grid-gap: 30px;
+	justify-content: center;
+	padding: 0 0 100px;
+	text-align: center;
 
-.process_list {
-	margin: 0 auto;
-	max-width: 980px;
-	padding: 35px 30px 0;
-	width: 100%;
-
-	p {
-		font-size: 16px;
-		font-weight: 300;
-		line-height: 1.4;
+	h3 {
+		text-align: center;
 	}
 
-	.wp-block-column {
-		flex-basis: auto !important;
-		flex-grow: unset;
-		margin: 0 !important;
+	&__desc {}
+
+	&__item {
+		counter-increment: process_counter;
+		max-width: 300px;
+		padding: 90px 0 0;
 		position: relative;
-		z-index: 3;
 
-		&:first-child {
-			width: 25%;
-		}
-
-		&:last-child {
-			width: 75%;
-		}
-	}
-
-	.wp-block-columns {
-		min-height: 200px;
-		width: 30%;
-	}
-
-	.wp-block-image {
-		width: 100%;
-
-		img {
-			width: 100%;
-		}
-	}
-
-	.wp-block-group__inner-container {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-	}
-}
-
-.process_list_item {
-	position: relative;
-
-	&::before {
-		color: $c_gradient_2;
-		display: block;
-		font-size: 200px;
-		font-weight: 700;
-		left: 0;
-		opacity: .2;
-		position: absolute;
-		top: 0;
-		z-index: 1;
-	}
-
-	&:nth-child(1) {
 		&::before {
-			content: "1";
-		}
-	}
-
-	&:nth-child(2) {
-		&::before {
-			content: "2";
-		}
-	}
-
-	&:nth-child(3) {
-		&::before {
-			content: "3";
-		}
-	}
-
-	&:nth-child(4) {
-		&::before {
-			content: "4";
-		}
-	}
-
-	&:nth-child(5) {
-		&::before {
-			content: "5";
-		}
-	}
-
-	&:nth-child(6) {
-		&::before {
-			content: "6";
-		}
-	}
-}
-
-@media #{$tablet} {
-	.process_list {
-		.wp-block-columns {
-			width: 50%;
-		}
-	}
-}
-
-@media #{$mobile} {
-	.process_list {
-		.wp-block-columns {
+			color: $c_gradient_footer_1;
+			content: '' counter(process_counter);
+			font-size: 80px;
+			font-weight: 700;
+			left: 0;
+			line-height: 1;
+			position: absolute;
+			top: 0;
 			width: 100%;
 		}
 	}
