Contacts. Add padding at the top

--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -2,7 +2,7 @@
 	color: $c_text;
 	margin: 0 auto;
 	max-width: 980px;
-	padding: 0 30px 50px;
+	padding: 100px 30px 50px;
 	position: relative;
 	transition: $transition;
 	width: 100%;
