--- a/src/assets/styles/topmenu.scss
+++ b/src/assets/styles/topmenu.scss
@@ -1,6 +1,6 @@
 .topmenu {
 	background-color: #fff;
-	box-shadow: 0 0 7px $c_gradient_home_end;
+	box-shadow: 0 0 7px #000;
 	font-size: 16px;
 	left: 0;
 	position: fixed;
@@ -62,12 +62,12 @@
 	justify-content: center;
 	width: 100%;
 
-	a {
+	&__link {
 		color: #000;
 		display: block;
 		opacity: .7;
 		outline: 0 none;
-		padding: 10px 39px;
+		padding: 10px 20px;
 		position: relative;
 		text-decoration: none;
 
