Topmenu phone CSS

--- a/src/assets/styles/topmenu.scss
+++ b/src/assets/styles/topmenu.scss
@@ -223,3 +223,18 @@
 		}
 	}
 }
+
+.topmenu_phone {
+	color: #000;
+	font-size: 14px;
+	opacity: .7;
+	position: absolute;
+	right: 10px;
+	text-decoration: none;
+	top: 50%;
+	transform: translateY(-50%);
+
+	&:hover {
+		opacity: 1;
+	}
+}
