--- a/src/assets/styles/contacts.scss
+++ b/src/assets/styles/contacts.scss
@@ -10,7 +10,7 @@
 
 	&__content {
 		margin: 0 auto;
-		max-width: 200px;
+		max-width: 300px;
 		padding: 0 0 30px;
 		width: 100%;
 	}
@@ -24,6 +24,7 @@
 }
 
 .contacts_links {
+	font-size: 20px;
 	margin: 30px 0;
 
 	&__img {
