--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -45,8 +45,8 @@ h2 {
 }
 
 h3 {
-	color: $c_text;
-	font-size: 29px;
+	color: #000;
+	font-size: 27px;
 	font-weight: 700;
 	padding: 0 0 .1em;
 	position: relative;
