--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -1,4 +1,7 @@
 .about {
+	font-size: 20px;
+	margin: 0 auto;
+	max-width: 700px;
 	padding: 50px 0;
 
 	a {
@@ -9,8 +12,9 @@
 .about_list {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 600px;
+	justify-content: center;
 	margin: 0 auto;
+	max-width: 600px;
 
 	&__item {
 		margin: 0 15px 15px 0;
