--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -48,7 +48,7 @@ h3 {
 	color: #000;
 	font-size: 27px;
 	font-weight: 700;
-	padding: 0 0 .1em;
+	padding: 1em 0 0;
 	position: relative;
 	text-align: left;
 	text-transform: uppercase;
@@ -79,6 +79,10 @@ html {
 
 // help classes [START]
 [data-theme="theme_black_and_white"] {
+	.about {
+		filter: grayscale(100%);
+	}
+
 	.btn {
 		&__main {
 			span {
@@ -131,6 +135,10 @@ html {
 [data-theme="theme_cyperpunk"] {
 	h2 {
 		color: $c_gradient_footer_1;
+	}
+
+	h3 {
+		color: $c_gradient_home_end;
 	}
 
 	.btn {
