--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -35,6 +35,7 @@ $c_selected:                #34d955;
 $c_text:                    #707070;
 $c_text_shadow:             #919191;
 $c_text_shadow_2:           #070449;
+$c_theme_forest:            #17520a;
 
 $fontsFolder:               'assets/fonts/';
 $i:                         'assets/i';
