--- a/src/assets/styles/custom.scss
+++ b/src/assets/styles/custom.scss
@@ -472,6 +472,15 @@ html {
 	}
 }
 
+.content_inner {
+	min-height: 500px;
+	padding: 150px 0 100px;
+
+	h1 {
+		color: #000;
+	}
+}
+
 .gotop {
 	background-color: #fff;
 	border-radius: 50%;
